--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -8,7 +8,7 @@ header {
     height: $height-header;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 1001;
   }
 
   &.header-home {
